baseline-recording/baseline_20260213_164205/configs/ingresses.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: myapp-gitops:networking.k8s.io/Ingress:myapp/web-main
      cert-manager.io/cluster-issuer: selfsigned-issuer
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"myapp-gitops:networking.k8s.io/Ingress:myapp/web-main","cert-manager.io/cluster-issuer":"selfsigned-issuer"},"creationTimestamp":"2026-01-27T09:47:10Z","generation":2,"name":"web-main","namespace":"myapp","resourceVersion":"39664858","uid":"a6c5b355-6272-4c7d-8062-8286a2f92b54"},"spec":{"ingressClassName":"traefik","rules":[{"host":"web.mycompany.local","http":{"paths":[{"ba [...]
    creationTimestamp: "2026-02-10T09:48:17Z"
    generation: 1
    name: web-main
    namespace: myapp
    resourceVersion: "41583639"
    uid: a4140b04-33f9-4041-a1f3-64dea8f39a25
  spec:
    ingressClassName: traefik
    rules:
    - host: web.mycompany.local
      http:
        paths:
        - backend:
            service:
              name: web-service
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - web.mycompany.local
      secretName: web-mycompany-tls
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
